# papersearch-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/papersearch_mcp/: __init__.py  __main__.py  arxiv_client.py  pdf_extractor.py  semantic_scholar.py  server.py
tests/: test_server.py
