[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papersearch-mcp"
version = "0.1.0"
description = "An MCP server for searching and retrieving academic papers from arXiv and Semantic Scholar"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sai Teja Bandaru", email = "saitejabandaru@users.noreply.github.com" },
]
keywords = ["mcp", "arxiv", "semantic-scholar", "academic", "papers", "research", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "PyMuPDF>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
papersearch-mcp = "papersearch_mcp.server:main"

[project.urls]
Homepage = "https://github.com/saitejabandaru-in/papersearch-mcp"
Repository = "https://github.com/saitejabandaru-in/papersearch-mcp"
Issues = "https://github.com/saitejabandaru-in/papersearch-mcp/issues"
Documentation = "https://github.com/saitejabandaru-in/papersearch-mcp#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/papersearch_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
